CSS dark mode fixes

--- a/live-examples/css-examples/basic-user-interface/outline-color.css
+++ b/live-examples/css-examples/basic-user-interface/outline-color.css
@@ -1,5 +1,4 @@
 #example-element {
-    background-color: #eee;
     outline: .75em solid;
     padding: .75em;
     width: 80%;
