--- a/live-examples/css-examples/lists/counter-reset.css
+++ b/live-examples/css-examples/lists/counter-reset.css
@@ -5,6 +5,7 @@
 
 #example-element {
     background-color: lightblue;
+    color: black;
 }
 
 h2 {
