--- a/live-examples/css-examples/positioned-layout/offsets.css
+++ b/live-examples/css-examples/positioned-layout/offsets.css
@@ -8,7 +8,7 @@
 }
 
 #example-element {
-    background-color: yellow;
+    background-color: #ff7100;
     border: 3px solid red;
     position: absolute;
     width: 140px;
